--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@zikeji/hypixel": "^3.1.1",
     "axios": "^0.24.0",
+    "bad-words": "3.0.4",
     "chalk": "^4.1.0",
     "discord.js-light": "^3.5.0",
     "express": "^4.18.1",
