--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypixel-discord-chat-bridge",
-  "version": "1.8.0",
+  "version": "1.7.0",
   "description": "A Hypixel guild chat and Discord chat bridge",
   "main": "index.js",
   "scripts": {
@@ -25,15 +25,15 @@
   "dependencies": {
     "@zikeji/hypixel": "^3.1.1",
     "axios": "^0.24.0",
-    "bad-words": "3.0.4",
+    "bad-words": "^3.0.4",
     "chalk": "^4.1.0",
     "discord.js-light": "^3.5.0",
     "express": "^4.18.1",
     "hypixel-api-reborn": "^10.0.0",
+    "imgur": "^2.2.0",
+    "tslib": "^2.4.0",
     "mineflayer": "^3.0.0",
     "node": "^14.17.4",
-    "server.js": "^1.0.0",
-    "smartestchatbot": "^2.0.1",
-    "xhr2": "^0.2.1"
+    "server.js": "^1.0.0"
   }
 }
