--- a/config.json
+++ b/config.json
@@ -42,11 +42,11 @@
     "notifiers": {
       "BANK_INTEREST": true,
       "DARK_AUCTION": true,
-      "ELECTION_BOOTH_OPENS": true,
-      "ELECTION_OVER": true,
-      "FALLEN_STAR_CULT": true,
+      "ELECTION_BOOTH_OPENS": false,
+      "ELECTION_OVER": false,
+      "FALLEN_STAR_CULT": false,
       "FEAR_MONGERER": true,
-      "JACOBS_CONTEST": true,
+      "JACOBS_CONTEST": false,
       "JERRYS_WORKSHOP": true,
       "NEW_YEAR_CELEBRATION": true,
       "SEASON_OF_JERRY": true,
