--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "json-crate": "^0.1.3",
     "lilyweight": "^2.6.3",
     "mineflayer": "^4.3.0",
+    "moment": "^2.29.4",
     "prismarine-nbt": "^1.6.0",
     "util": "^0.12.4"
   }
