--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "hypixel-api-reborn": "^10.0.0",
     "imgur": "^2.2.0",
     "json-crate": "^0.1.3",
-    "lilyweight": "^2.6.3",
+    "lilyweight": "^2.7.0",
     "mineflayer": "^4.3.0",
     "moment": "^2.29.4",
     "prismarine-nbt": "^1.6.0",
     "util": "^0.12.4",
-    "skyhelper-networth": "^1.1.6",
+    "skyhelper-networth": "^1.1.6"
   }
 }
