--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install node dependencies
-        run: npm ci
+        run: npm i
 
       - name: es-lint
         run: npm run lint
@@ -39,7 +39,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install node dependencies
-        run: npm ci
+        run: npm i
 
       - name: ejs-lint
         run: npm run lint:ejs
