--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
     "eslint-plugin-lit": "^1.6.1",
     "eslint-plugin-wc": "^1.3.2",
     "nodemon": "^2.0.19",
-    "prettier": "2.7.1",
+    "prettier": "2.7.1"
   }
 }
