--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "ejs-lint": "^1.2.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
