--- a/package.json
+++ b/package.json
@@ -60,5 +60,12 @@
     "eslint-plugin-wc": "^1.3.2",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1"
+  },
+  "eslintConfig": {
+    "globals": {
+      "bot": true,
+      "client": true,
+      "minecraftCommandList": true
+    }
   }
 }
