--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
   "globals": {
     "bot": true,
     "client": true,
-    "minecraftCommandList": true
+    "minecraftCommandList": true,
+    "uptime": true,
+    "bridgeChat": true
   },
   "rules": {
     "curly": ["warn", "multi-line", "consistent"],
