--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
-    "compilerOptions": {
-      "module": "ES2020",
-      "strict": true,
-      "noImplicitAny": true,
-      "sourceMap": true
-    },
-    "exclude": ["node_modules"]
+  "compilerOptions": {
+    "module": "ES2020",
+    "strict": true,
+    "noImplicitAny": true,
+    "sourceMap": true
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
