--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bad-words": "^3.0.4",
-    "canvas": "^2.10.1",
+    "canvas": "^2.10.2",
     "chalk": "^4.1.0",
     "discord.js": "^14.3.0",
     "express": "^4.18.1",
@@ -44,13 +44,13 @@
     "mineflayer": "^4.3.0",
     "moment": "^2.29.4",
     "prismarine-nbt": "^2.2.1",
-    "util": "^0.12.4",
-    "skyhelper-networth": "^1.3.0"
+    "skyhelper-networth": "^1.3.0",
+    "util": "^0.12.4"
   },
   "devDependencies": {
-    "concurrently": "^7.3.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "concurrently": "^7.3.0",
     "ejs-lint": "^1.2.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
