--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   },
   "homepage": "https://github.com/DuckySoLucky/hypixel-discord-chat-bridge#readme",
   "dependencies": {
+    "@discordjs/rest": "^1.3.0",
     "axios": "^0.27.2",
     "bad-words": "^3.0.4",
     "canvas": "^2.10.2",
     "chalk": "^4.1.0",
+    "discord-api-types": "^0.37.16",
     "discord.js": "^14.3.0",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
