--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "eslint": "^8.32.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.19",
     "prettier": "2.8.3"
   },
