feat: add skyblockLevel to requirements

--- a/config.example.json
+++ b/config.example.json
@@ -59,7 +59,8 @@
       "skywarsStars": 0,
       "bedwarsStars": 0,
       "senitherWeight": 0,
-      "lilyWeight": 0
+      "lilyWeight": 0,
+      "skyblockLevel": 0
     }
   }
 }
