--- a/config.example.json
+++ b/config.example.json
@@ -1,66 +1,87 @@
 {
   "minecraft": {
-    "prefix": "!",
-    "guildID": "HYPIXEL_GUILD_ID",
-    "guildExp": 0,
-    "messageRepeatBypass": true,
-    "messageRepeatBypassLength": 24,
-    "messageFormat": " »"
-  },
-  "discord": {
-    "token": "TOKEN",
-    "clientID": "CLIENT_ID_OF_DISCORD_BOT",
-    "serverID": "DISCORD_SERVER_ID",
-    "guildChatChannel": "CHANNEL_ID",
-    "officerChannel": "CHANNEL_ID",
-    "loggingChannel": "CHANNEL_ID",
-    "commandRole": "ROLE_ID",
-    "messageMode": "minecraft",
-    "filterMessages": true,
-    "joinMessage": false
-  },
-  "console": {
-    "maxEventSize": 50,
-    "debug": true,
-    "debugChannel": "CHANNEL_ID"
-  },
-  "api": {
-    "hypixelAPI": "https://api.hypixel.net",
-    "hypixelAPIkey": "HYPIXEL_API_KEY",
-    "antiSniperAPI": "https://api.antisniper.net",
-    "antiSniperKey": "ANTISNIPER_API_KEY",
-    "playerDBAPI": "https://playerdb.co/api/player/minecraft",
-    "imgurAPIkey": "IMGUR_CLIENT_ID",
-    "pixelicAPI": "https://api.pixelic.de",
-    "pixelicAPIkey": "PIXEL_API_KEY"
-  },
-  "event": {
-    "enabled": true,
-    "notifiers": {
-      "BANK_INTEREST": true,
-      "DARK_AUCTION": true,
-      "ELECTION_BOOTH_OPENS": false,
-      "ELECTION_OVER": true,
-      "FALLEN_STAR_CULT": true,
-      "FEAR_MONGERER": true,
-      "JACOBS_CONTEST": true,
-      "JERRYS_WORKSHOP": true,
-      "NEW_YEAR_CELEBRATION": true,
-      "SEASON_OF_JERRY": true,
-      "SPOOKY_FESTIVAL": true,
-      "TRAVELING_ZOO": true
+    "bot": {
+      "prefix": "!",
+      "messageFormat": " »",
+      "messageRepeatBypass": true,
+      "messageRepeatBypassLength": 24
+    },
+    "guild": {
+      "guildExp": 50000
+    },
+    "API": {
+      "hypixelAPI": "https://api.hypixel.net",
+      "hypixelAPIkey": "HYPIXEL_API_KEY",
+
+      "antiSniperAPI": "https://api.antisniper.net",
+      "antiSniperKey": "ANTISNIPER_API_KEY",
+
+      "playerDBAPI": "https://playerdb.co/api/player/minecraft",
+
+      "pixelicAPI": "https://api.pixelic.de",
+      "pixelicAPIkey": "PIXELIC_API_KEY",
+
+      "imgurAPIkey": "IMGUR_API_KEY"
+    },
+    "guildRequirement": {
+      "enabled": false,
+      "autoAccept": false,
+      "requirements": {
+        "bedwarsStars": 0,
+        "bedwarsStarsWithFKDR": 0,
+        "bedwarsFKDR": 0,
+
+        "skywarsStars": 0,
+        "skywarsStarsWithKDR": 0,
+        "skywarsKDR": 0,
+
+        "duelsWins": 0,
+        "duelsWinsWithWLR": 0,
+        "duelsWLR": 0,
+
+        "senitherWeight": 0,
+        "lilyWeight": 0,
+        "skyblockLevel": 0
+      }
+    },
+    "skyblockEventsNotifications": {
+      "enabled": true,
+      "notifiers": {
+        "BANK_INTEREST": true,
+        "DARK_AUCTION": true,
+        "ELECTION_BOOTH_OPENS": true,
+        "ELECTION_OVER": true,
+        "FALLEN_STAR_CULT": true,
+        "FEAR_MONGERER": true,
+        "JACOBS_CONTEST": true,
+        "JERRYS_WORKSHOP": true,
+        "NEW_YEAR_CELEBRATION": true,
+        "SEASON_OF_JERRY": true,
+        "SPOOKY_FESTIVAL": true,
+        "TRAVELING_ZOO": true
+      }
     }
   },
-  "guildRequirement": {
-    "enabled": true,
-    "autoAccept": false,
-    "requirements": {
-      "hypixelNetworkLevel": 0,
-      "skywarsStars": 0,
-      "bedwarsStars": 0,
-      "senitherWeight": 0,
-      "lilyWeight": 0,
-      "skyblockLevel": 0
+  "discord": {
+    "bot": {
+      "token": "DISCORD_BOT_TOKEN",
+      "clientID": "DISCORD_BOT_CLIENT_ID",
+      "serverID": "DISCORD_SERVER_ID"
+    },
+    "channels": {
+      "guildChatChannel": "GUILD_CHAT_CHANNEL_ID",
+      "officerChannel": "OFFICER_CHANNEL_ID",
+      "loggingChannel": "LOGGING_CHANNEL_ID",
+      "debugMode": true,
+      "debugChannel": "DEBUG_CHANNEL_ID"
+    },
+    "roles": {
+      "commandRole": "COMMAND_ROLE_ID"
+    },
+    "other": {
+      "messageMode": "minecraft",
+      "filterMessages": true,
+      "joinMessage": false
     }
   }
 }
