feat: add web to config

--- a/config.example.json
+++ b/config.example.json
@@ -83,5 +83,9 @@
       "filterMessages": true,
       "joinMessage": false
     }
+  },
+  "web": {
+    "enabled": true,
+    "port": 1439
   }
 }
