--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "discord-emoji-converter": "^1.2.8",
     "discord.js": "^14.7.1",
     "express": "^4.18.1",
+    "fs-promise": "^2.0.3",
     "hypixel-api-reborn": "^10.0.0",
     "imgur": "^2.2.0",
     "lilyweight": "^2.7.0",
     "mineflayer": "^4.8.1",
+    "mkdirp": "^2.1.3",
     "moment": "^2.29.4",
     "prismarine-nbt": "^2.2.1",
     "skyhelper-networth": "1.11.4",
