--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prismarine-nbt": "^2.2.1",
     "rss-parser": "^3.13.0",
     "skyhelper-networth": "1.15.0",
+    "sqlite3": "^5.1.6",
     "util": "^0.12.5"
   },
   "devDependencies": {
