--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mineflayer": "^4.8.1",
     "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
+    "node-cron": "^3.0.2",
     "prismarine-nbt": "^2.2.1",
     "rss-parser": "^3.13.0",
     "skyhelper-networth": "1.15.0",
