Too lazy to do this the proper way

--- a/config.example.json
+++ b/config.example.json
@@ -94,6 +94,9 @@
   },
   "web": {
     "enabled": false,
+    "endpoints": {
+      "invite": false
+    },
     "port": 1439
   },
   "database": {
