--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles --forceExit",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
     "lint:ejs": "ejslint **/*.ejs",
@@ -57,6 +57,7 @@
   "devDependencies": {
     "eslint": "^8.43.0",
     "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "prettier": "2.8.8"
   }
