--- a/config.example.json
+++ b/config.example.json
@@ -93,7 +93,8 @@
       "messageMode": "minecraft",
       "messageFormat": "{chatType} > {skin} {rank} {username} {guildRank}§f: {message}",
       "filterMessages": true,
-      "joinMessage": true
+      "joinMessage": true,
+      "autoLimbo": true
     }
   },
   "web": {
