--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "canvas": "^2.10.1",
     "chalk": "^4.1.0",
     "cheerio": "1.0.0-rc.12",
+    "cluster": "^0.7.7",
     "discord-api-types": "^0.37.55",
     "discord-emoji-converter": "^1.2.8",
     "discord.js": "^14.13.0",
@@ -48,7 +49,7 @@
     "mineflayer": "^4.8.1",
     "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
-    "node-cron": "^3.0.2",
+    "node-fetch": "^2.6.6",
     "prismarine-nbt": "^2.2.1",
     "rss-parser": "^3.13.0",
     "skyhelper-networth": "1.18.0",
@@ -59,6 +60,6 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22",
-    "prettier": "2.8.8"
+    "prettier": "^2.8.8"
   }
 }
