--- a/config.example.json
+++ b/config.example.json
@@ -105,6 +105,7 @@
   },
   "other": {
     "autoUpdater": true,
-    "autoUpdaterInterval": 12
+    "autoUpdaterInterval": 12,
+    "logToFiles": true
   }
 }
