--- a/config.example.json
+++ b/config.example.json
@@ -87,6 +87,7 @@
     "commands": {
       "checkPerms": true,
       "commandRole": "COMMAND_ROLE_ID",
+      "blacklistRole": "BLACKLIST_ROLE_ID",
       "users": ["486155512568741900"]
     },
     "other": {
