logging to files (#242)
* logging to files

* pnpm fix

* refactor: format

---------

Co-authored-by: Robert Kovac <robertkovac160@gmail.com>

--- a/config.example.json
+++ b/config.example.json
@@ -106,6 +106,7 @@
   },
   "other": {
     "autoUpdater": true,
-    "autoUpdaterInterval": 12
+    "autoUpdaterInterval": 12,
+    "logToFiles": true
   }
 }
