--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rss-parser": "^3.13.0",
     "skyhelper-networth": "1.18.5",
     "util": "^0.12.5",
+    "winston": "^3.13.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
