fix(config): add HOPPITY_HUNT

--- a/config.example.json
+++ b/config.example.json
@@ -58,7 +58,8 @@
         "NEW_YEAR_CELEBRATION": true,
         "SEASON_OF_JERRY": true,
         "SPOOKY_FESTIVAL": true,
-        "TRAVELING_ZOO": true
+        "TRAVELING_ZOO": true,
+        "HOPPITY_HUNT": true,
       },
       "customTime": {
         "2": ["BANK_INTEREST", "DARK_AUCTION", "JACOBS_CONTEST"]
