--- a/config.example.json
+++ b/config.example.json
@@ -59,7 +59,7 @@
         "SEASON_OF_JERRY": true,
         "SPOOKY_FESTIVAL": true,
         "TRAVELING_ZOO": true,
-        "HOPPITY_HUNT": true,
+        "HOPPITY_HUNT": true
       },
       "customTime": {
         "2": ["BANK_INTEREST", "DARK_AUCTION", "JACOBS_CONTEST"]
