--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   },
   "globals": {
     "bot": true,
-    "client": true
+    "client": true,
+    "guild": true
   },
   "rules": {
     "curly": ["warn", "multi-line", "consistent"],
