--- a/config.example.json
+++ b/config.example.json
@@ -105,6 +105,20 @@
     "port": 1439,
     "token": "WEBSOCKET_TOKEN"
   },
+  "verification": {
+    "enabled": false,
+    "role": "VERIFIED_ROLE_ID",
+    "guildMemberRole": "GUILD_MEMBER_ROLE_ID",
+    "autoUpdater": true,
+    "autoUpdaterInterval": 24,
+    "name": "{username}",
+    "ranks": [
+      {
+        "name": "IN_GAME_RANK_NAME",
+        "role": "DISCORD_ROLE_ID"
+      }
+    ]
+  },
   "other": {
     "autoUpdater": true,
     "autoUpdaterInterval": 12,
