--- a/config.example.json
+++ b/config.example.json
@@ -108,6 +108,21 @@
   "giveaway": {
     "enabled": false
   },
+  "verification": {
+    "enabled": false,
+    "verifiedRole": "VERIFIED_ROLE_ID",
+    "removeVerificationRole": true,
+    "guildMemberRole": "GUILD_MEMBER_ROLE_ID",
+    "autoUpdater": true,
+    "autoUpdaterInterval": 24,
+    "name": "{username}",
+    "ranks": [
+      {
+        "name": "IN_GAME_RANK_NAME",
+        "role": "DISCORD_ROLE_ID"
+      }
+    ]
+  },
   "other": {
     "autoUpdater": true,
     "autoUpdaterInterval": 12,
