--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "prefer-const": ["warn", { "destructuring": "all" }],
     "no-constant-condition": ["error", { "checkLoops": false }],
     "import/extensions": ["warn", "always", { "ts": "never" }],
-    "no-throw-literal": "error"
+    "no-throw-literal": "error",
+    "no-console": "error"
   }
 }
