Support for Level Roles

--- a/config.example.json
+++ b/config.example.json
@@ -118,7 +118,8 @@
         "name": "IN_GAME_RANK_NAME",
         "role": "DISCORD_ROLE_ID"
       }
-    ]
+    ],
+    "levelRoles": [{ "type": "bedwarsStar", "requirement": 200, "roleId": "DISCORD_ROLE_ID" }]
   },
   "other": {
     "autoUpdater": true,
