--- a/config.example.json
+++ b/config.example.json
@@ -113,13 +113,19 @@
     "autoUpdater": true,
     "autoUpdaterInterval": 24,
     "name": "{username}",
+    "levelRoles": [
+      {
+        "type": "bedwarsStar",
+        "requirement": 200,
+        "roleId": "DISCORD_ROLE_ID"
+      }
+    ],
     "ranks": [
       {
         "name": "IN_GAME_RANK_NAME",
         "role": "DISCORD_ROLE_ID"
       }
-    ],
-    "levelRoles": [{ "type": "bedwarsStar", "requirement": 200, "roleId": "DISCORD_ROLE_ID" }]
+    ]
   },
   "other": {
     "autoUpdater": true,
