--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,6 @@
     "prefer-const": ["warn", { "destructuring": "all" }],
     "no-constant-condition": ["error", { "checkLoops": false }],
     "import/extensions": ["warn", "always", { "ts": "never" }],
-    "no-throw-literal": "error"
+    "no-throw-literal": "error",
   }
 }
