--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/DuckySoLucky/hypixel-discord-chat-bridge#readme",
   "dependencies": {
     "@discordjs/rest": "^1.5.0",
+    "@inquirer/prompts": "^7.3.2",
     "axios": "0.27.2",
     "bad-words": "^3.0.4",
     "canvas": "^2.11.2",
@@ -43,7 +44,6 @@
     "fs-promise": "^2.0.3",
     "hypixel-api-reborn": "^11.0.1",
     "imgur": "^2.2.0",
-    "inquirer": "^9.3.4",
     "lilyweight": "^2.7.0",
     "lodash": "^4.17.21",
     "mineflayer": "^4.8.1",
