--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,6 @@
     "no-unused-vars": ["error", { "args": "none" }],
     "prefer-const": ["warn", { "destructuring": "all" }],
     "no-constant-condition": ["error", { "checkLoops": false }],
-    "import/extensions": ["warn", "always", { "ts": "never" }],
-    "no-throw-literal": "error",
+    "import/extensions": ["warn", "always", { "ts": "never" }]
   }
 }
