--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/DuckySoLucky/hypixel-discord-chat-bridge#readme",
   "dependencies": {
     "@discordjs/rest": "^1.5.0",
-    "axios": "0.27.2",
+    "axios": "^1.7.9",
     "bad-words": "^3.0.4",
     "canvas": "^2.11.2",
     "chalk": "^4.1.0",
