--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "eslint": "^8.43.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "prettier": "3.2.5"
