--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "prettier": "3.2.5"
+    "prettier": "^3.5.2"
   }
 }
