--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chalk": "^4.1.0",
     "cheerio": "1.0.0-rc.12",
     "discord-api-types": "^0.37.55",
-    "discord-emoji-converter": "^1.2.8",
+    "node-emoji": "^2.2.0",
     "discord.js": "^14.13.0",
     "express": "^4.18.1",
     "fs-promise": "^2.0.3",
