Fix(324): Add support for custom emojis again

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chalk": "^4.1.0",
     "cheerio": "1.0.0-rc.12",
     "discord-api-types": "^0.37.55",
-    "node-emoji": "^2.2.0",
+    "discord-emoji-converter": "^1.2.8",
     "discord.js": "^14.13.0",
     "express": "^4.18.1",
     "fs-promise": "^2.0.3",
@@ -48,6 +48,7 @@
     "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
     "node-cron": "^3.0.2",
+    "node-emoji": "^2.2.0",
     "pretty-ms": "^7.0.1",
     "prismarine-nbt": "^2.2.1",
     "rss-parser": "^3.13.0",
